find_package(UnitTest++)

macro (do_test binary)
  add_executable (test_${binary} ${binary}.cc)
  target_link_libraries (test_${binary} UnitTest++ monsoon_cache)
  target_include_directories(test_${binary} PUBLIC ${UTPP_INCLUDE_DIRS})
  add_test (${binary} test_${binary})
endmacro (do_test)

if (UnitTest++_FOUND)
  include(CTest)

  do_test (base_case)
  do_test (access_expire)
  do_test (async)
  do_test (async_exception)
  do_test (cache_memory)
  do_test (cache_size)
  do_test (max_age)
  do_test (allocator)
  do_test (expire)
  do_test (storage_override)
endif ()
